# portfolio

./: .nojekyll  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  cv.html  cv.qmd  hello.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
_site/: about.html  hello.html  index.html  robots.txt  search.json  sitemap.xml
